# ELIT21coin

./: CMakeLists.txt  PLAN_DEVELOPPEMENT_ELIT21COIN.md  README.md
include/elit21/: block.hpp  blockchain.hpp  codec.hpp  mempool.hpp  node.hpp  readiness.hpp  transaction.hpp  wallet.hpp
src/: block.cpp  blockchain.cpp  codec.cpp  main.cpp  mempool.cpp  node.cpp  readiness.cpp  transaction.cpp  wallet.cpp
tests/: test_elit21.cpp
